<resources>
    <string name="app_name">Trucky</string>
    <string name="locate">LOCATE</string>
    <string name="order">ORDER</string>
    <string name="pick_up">PICKUP</string>
    <string name="find_truck">FIND TRUCK</string>
    <string name="find_resturent">FIND RESTURENT</string>
    <string name="live_station">LIVE STATION</string>
    <string name="our_services">OUR SERVICES</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="resturent">Resturent</string>
    <string name="login">LOGIN</string>
    <string name="my_orders">MY ORDERS</string>
    <string name="notification"><![CDATA[NOTIFICATION & ALERTS]]></string>
    <string name="my_favorites">MY FAVORITES</string>
    <string name="terms_and_conditions"><![CDATA[TERMS & CONDITIONS]]></string>
    <string name="language">LANGUAGE</string>
    <string name="en">EN</string>
    <string name="ar">AR</string>
    <string name="social">SOCIAL MEDIA</string>
    <string name="logout">LOGOUT</string>
    <string name="find">FIND</string>
    <string name="cusine_type">Cusine Type : </string>
    <string name="resturent_menu">Restaurent Menu</string>
    <string name="trucks">TRUCKS</string>
    <string name="price">Price :</string>
    <string name="services">Services :</string>
    <string name="persons">Persons</string>
    <string name="food_description">Food Description</string>
    <string name="service_and_presentation"><![CDATA[Service & Presentation : ]]></string>
    <string name="set_up_time">Set-up Time</string>
    <string name="max_time">Max. Time</string>
    <string name="requirements">Requirements</string>
    <string name="serves">SERVES</string>
    <string name="gender_of_server">GENDER OF SERVER OPTION</string>

    <string name="add_ons">ADD ONS</string>
    <string name="special_req">SPECIAL REQUEST</string>
    <string name="add_delivery_address">ADD DELIVERY ADDRESS</string>
    <string name="subtotal">SUBTOTAL</string>

    <string name="login_title">SIGN IN TO SPEED UP CHECKOUT PROCESS AND SAVE YOUR ORDER TO ACCOUNT.</string>

    <string name="login_username_hint">\u0020 Username</string>
    <string name="login_pass_hint">\u0020 Password</string>
    <string name="login_login_btn">LOGIN</string>
    <string name="forget_pass">Forget Password ?</string>
    <string name="create_account">Create Account</string>
    <string name="login_or_txt">OR</string>
    <string name="forget_pass_title">PLEASE ENTER YOUR EMAIL AND GET NEW PASSWORD</string>
    <string name="forget_pass_email_hint">\u0020 Enter your email address</string>
    <string name="forget_pass_reset_pass_btn">RESET PASSWORD</string>
    <string name="forget_pass_back_btn">BACK TO LOGIN</string>
    <string name="forger_pass_title">FORGET PASSWORD</string>
    <string name="register_title">REGISTER</string>
    <string name="male">\u0020 Male</string>
    <string name="female">\u0020 Female</string>
    <string name="register_checkbox_text">\u0020 I agree to the terms and conditions</string>
    <string name="register_btn">SIGNUP</string>
    <string name="register_fname_hint">\u0020 First name</string>
    <string name="register_lname_hint">\u0020 Last name</string>
    <string name="register_email_hint">\u0020 Email</string>
    <string name="register_date_birth_hint">\u0020 Date of Birth</string>
    <string name="register_phone_hint">\u0020 Phone</string>
    <string name="register_pass_re_hint">\u0020 Re-enter password</string>
    <string name="no_data">\u0020 No Data</string>
    <string name="profile_edit_btn">EDIT</string>
    <string name="profile_check_address_btn">CHECK MY ADDRESS BOOKING</string>
    <string name="terms">TERM AND CONDITIONS</string>
    <string name="terms_txt">Terms and conditions</string>
    <string name="contact_us">CONTACT US</string>
    <string name="contact_us_name_hint">\u0020 Name</string>
    <string name="contact_us_subject_hint">\u0020 Subject</string>
    <string name="contact_us_msg_hint">Your Message ...</string>
    <string name="contact_us_send_msg_btn">SEND MESSAGE</string>
    <string name="contact_us_text">We will be happy to help you. Please share your feedback or inquiry with us.</string>
    <string name="social_media">SOCIAL MEDIA</string>
    <string name="social_media_fb">FACEBOOK</string>
    <string name="social_media_twi">TWITTER</string>
    <string name="social_media_linkedin">LINKEDIN</string>
    <string name="social_media_ytube">YOUTUBE</string>
    <string name="social_media_instg">INSTAGRAM</string>
    <string name="social_media_snapchat">SNAPCHAT</string>
    <string name="favorites">FAVORITES</string>
    <string name="faqs">FAQs</string>
    <string name="address_book_title">Please select your delivery address from the list below, or add new one</string>
    <string name="add_new_address">ADD NEW ADDRESS</string>
    <string name="check_address_btn">ADD NEW ADDRESS</string>
    <string name="save_address_btn">SAVE ADDRESS</string>
    <string name="skip_map_btn">SKIP MAP</string>
    <string name="choose_distance">Choose Distance</string>
    <string name="direction">DIRECTION</string>
    <string name="cancel">CANCEL</string>
    <string name="food_trucks">Food Trucks</string>
    <string name="most_selling">Most Selling</string>
    <string name="trucks_menu">TRUCKS MENU</string>
    <string name="available">Available</string>
    <string name="quantity">QUANTITY</string>
    <string name="customized_food">Customized Food</string>
    <string name="add_to_bag">ADD TO BAG</string>
    <string name="total">TOTAL</string>
    <string name="promotional">Enter a promotional code</string>
    <string name="grand_total">GRAND TOTAL</string>
    <string name="select_payment">SELECT YOUR PAYMENT</string>
    <string name="cash">CASH</string>
    <string name="my_order_bag">MY ORDER BAG</string>
    <string name="add_item">ADD ITEM</string>
    <string name="check_out">CHECK OUT</string>

    <string name="add_address_new_title">Please fill the delivery adress in the following form</string>
    <string name="area">Area</string>
    <string name="address_name_optional">Address Name (Optional)</string>
    <string name="block">Block</string>
    <string name="street">Street</string>
    <string name="avenue_optional">Avenue (Optional)</string>
    <string name="building">Building</string>
    <string name="floor">Floor</string>
    <string name="apartement_no">Apartement No</string>
    <string name="additional_direction">Additional Direction (Optional)</string>
    <string name="mobile">Mobile No</string>
    <string name="land_line_no">Land Line No (Optional)</string>
    <string name="save_address">Save Address</string>
    <string name="select_area">Location</string>
    <string name="select_cuisine">Cuisine Type</string>
    <string name="plz_enter_email">Please Enter Correct Email</string>
    <string name="alert_no_internet">Please check your network connection</string>
</resources>
