<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.mawaqaa.trucky.Fragement.MyProfileFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/login_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.3"
        android:orientation="vertical"
        android:weightSum="3">

        <EditText
            android:id="@+id/login_username_Etxt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/text_field_lg"
            android:drawableLeft="@drawable/login_drawable_left_username"
            android:ems="10"
            android:hint="@string/login_username_hint"
            android:inputType="textEmailAddress"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/login_pass_Etxt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/text_field_lg"
            android:drawableLeft="@drawable/login_drawable_left_pass"
            android:ems="10"
            android:hint="@string/login_pass_hint"

            android:inputType="textPassword"
            android:textSize="14dp" />

        <Button
            android:id="@+id/login_login_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_lg"
            android:gravity="center"
            android:text="@string/login_login_btn"
            android:textColor="#fff"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/login_forgetPass_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/forget_pass" />

        <TextView
            android:id="@+id/login_cteateAcc_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/create_account" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:layout_weight="1.3"
            android:background="#000" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center"
            android:text="@string/login_or_txt" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:layout_weight="1.3"
            android:background="#000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.3"
        android:gravity="top"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/login_fb_imgv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/fb" />

        <ImageView
            android:id="@+id/login_mail_imgv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/mail" />

        <ImageView
            android:id="@+id/login_twi_imgv"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/twitter" />
    </LinearLayout>


</LinearLayout>
